--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "url": "git+https://github.com/ijemafe/PoE-Overlay.git"
   },
   "author": {
-    "name": "Kyusung4698",
-    "email": "kyusung4698@gmail.com"
+    "name": "ijemafe",
+    "email": "noreply@ijemafe.com"
   },
   "bugs": {
     "url": "https://github.com/ijemafe/PoE-Overlay/issues"
@@ -79,14 +79,14 @@
     "@types/resize-observer-browser": "^0.1.3",
     "auto-launch": "^5.0.5",
     "bootstrap": "^4.4.1",
-    "custom-electron-titlebar": "git+https://github.com/Kyusung4698/custom-electron-titlebar.git#9863e12aa39bb077f8b49f7569169f03e14b2995",
+    "custom-electron-titlebar": "git+https://github.com/ijemafe/custom-electron-titlebar.git#9863e12aa39bb077f8b49f7569169f03e14b2995",
     "electron-log": "^4.1.1",
     "electron-updater": "^4.2.5",
     "iohook": "^0.6.5",
     "localforage": "^1.7.3",
     "moment": "^2.24.0",
     "node-window-manager": "^2.2.2",
-    "robotjs": "git+https://github.com/Kyusung4698/robotjs.git#a219829c83ff7f3a802c98a9c52a672ca798d80e",
+    "robotjs": "git+https://github.com/ijemafe/robotjs.git#a219829c83ff7f3a802c98a9c52a672ca798d80e",
     "rxjs": "^6.5.5",
     "tslib": "^1.11.1",
     "zone.js": "^0.10.3"
