Updates last reference

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "url": "git+https://github.com/PoE-Overlay-Community/PoE-Overlay-Community-Fork.git"
   },
   "author": {
-    "name": "ijemafe",
-    "email": "noreply@ijemafe.com"
+    "name": "PoE-Overlay-Community",
+    "email": "noreply@poe-overlay-community.com"
   },
   "bugs": {
     "url": "https://github.com/PoE-Overlay-Community/PoE-Overlay-Community-Fork/issues"
