--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "npm run electron:serve-tsc && ng build",
     "build:dev": "npm run build",
     "build:prod": "npm run build -- -c production",
-    "electron:serve-tsc": "tsc -p tsconfig.serve.json",
+    "electron:serve-tsc": "node_modules/.bin/tsc -p tsconfig.serve.json",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:serve-tsc && electron . --serve",
     "electron:local": "npm run build:prod && electron .",
     "electron:windows": "npm run build:prod && electron-builder build --windows",
