--- a/package.json
+++ b/package.json
@@ -5,25 +5,26 @@
   "description": "A Overlay for Path of Exile. Built with Electron and Angular.",
   "main": "main.js",
   "scripts": {
-    "postinstall": "npm run ng:cc && npm run electron:deps",
-    "ng:cc": "ngcc --properties esm5 browser module main --first-only --create-ivy-entry-points",
-    "ng:serve": "ng serve",
-    "ng:test": "ng test",
-    "ng:lint": "ng lint --fix",
-    "start": "npm-run-all -p ng:serve electron:serve",
-    "build": "npm run electron:serve-tsc && ng build",
     "build:dev": "npm run build",
     "build:prod": "npm run build -- -c production",
+    "build": "npm run electron:serve-tsc && ng build",
+    "electron:build": "npm run build:prod && electron-builder build --linux --windows",
+    "electron:deploy": "npm run build:prod && electron-builder build --win --publish always",
+    "electron:deps": "electron-builder install-app-deps",
+    "electron:linux": "npm run build:prod && electron-builder build --linux",
+    "electron:local": "npm run build:prod && electron .",
+    "electron:rebuild": "npm rebuild --runtime=electron --target=8.2.3 --disturl=https://atom.io/download/atom-shell --abi=76",
     "electron:serve-tsc": "node_modules/.bin/tsc -p tsconfig.serve.json",
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:serve-tsc && electron . --serve",
-    "electron:local": "npm run build:prod && electron .",
-    "electron:windows": "npm run build:prod && electron-builder build --windows",
-    "electron:linux": "npm run build:prod && electron-builder build --linux",
-    "electron:build": "npm run build:prod && electron-builder build --linux --windows",
     "electron:version": "electron -v && electron -a",
-    "electron:deps": "electron-builder install-app-deps",
-    "electron:deploy": "npm run build:prod && electron-builder build --win --publish always",
-    "electron:rebuild": "npm rebuild --runtime=electron --target=8.2.3 --disturl=https://atom.io/download/atom-shell --abi=76"
+    "electron:windows": "npm run build:prod && electron-builder build --windows",
+    "format": "npm run ng:lint && prettier \"src/**/*.{js,ts,json,html,scss}\" --write --list-different --ignore-path .gitignore",
+    "ng:cc": "ngcc --properties esm5 browser module main --first-only --create-ivy-entry-points",
+    "ng:lint": "ng lint --fix",
+    "ng:serve": "ng serve",
+    "ng:test": "ng test",
+    "postinstall": "npm run ng:cc && npm run electron:deps",
+    "start": "npm-run-all -p ng:serve electron:serve"
   },
   "repository": {
     "type": "git",
