--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "printWidth": 100,
   "singleQuote": true,
   "trailingComma": "es5",
-  "semi": false
+  "semi": false,
+  "endOfLine": "crlf"
 }
