Add node.js github action to run tests for pull requests (#24)
* add node.js github action

* Update node.js.yml

* Update node.js.yml

* extract base karma config and add ci config and npm task

* update github action to use new ci task

* actually add karma-ci.conf.js and karma-base.conf.js

* add singleRun parameter

* update base config

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ng:lint": "ng lint --fix",
     "ng:serve": "ng serve",
     "ng:test": "ng test",
+    "ng:test:ci": "ng test --karma-config=karma-ci.conf.js",
     "postinstall": "npm run ng:cc && npm run electron:deps",
     "start": "npm-run-all -p ng:serve electron:serve"
   },
