--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
               "src/favicon@2x.png",
               "src/favicon@3x.png",
               "src/favicon@4x.png",
+              "src/favicon256x256.png",
               "src/assets/i18n"
             ],
             "styles": [
