--- a/package.json
+++ b/package.json
@@ -41,59 +41,60 @@
   "homepage": "https://github.com/PoE-Overlay-Community/PoE-Overlay-Community-Fork",
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.8",
-    "@angular/cli": "^9.1.3",
-    "@angular/compiler-cli": "^9.1.3",
-    "@angular/language-service": "^9.1.3",
+    "@angular/cli": "^9.1.8",
+    "@angular/compiler-cli": "^9.1.11",
+    "@angular/language-service": "^9.1.11",
     "@types/jasmine": "^3.5.10",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.37",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "12.12.37",
     "codelyzer": "^5.2.2",
-    "electron": "^8.2.3",
-    "electron-builder": "^21.2.0",
+    "electron": "^9.0.3",
+    "electron-builder": "^22.7.0",
     "electron-reload": "^1.5.0",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.1",
-    "karma-jasmine": "^3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
+    "jasmine-spec-reporter": "^5.0.2",
+    "karma": "~5.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
-    "protractor": "^5.4.4",
-    "ts-node": "^8.9.1",
+    "protractor": "^7.0.0",
+    "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.3.0",
-    "typescript": "~3.7.5",
-    "wait-on": "^4.0.2"
+    "typescript": "3.8.3",
+    "wait-on": "^5.0.1"
   },
   "dependencies": {
-    "@angular/animations": "^9.1.3",
-    "@angular/cdk": "^9.2.1",
-    "@angular/common": "^9.1.3",
-    "@angular/compiler": "^9.1.3",
-    "@angular/core": "^9.1.3",
-    "@angular/forms": "^9.1.3",
-    "@angular/material": "^9.2.1",
-    "@angular/platform-browser": "^9.1.3",
-    "@angular/platform-browser-dynamic": "^9.1.3",
-    "@angular/router": "^9.1.3",
+    "@angular/animations": "^9.1.11",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "^9.1.11",
+    "@angular/compiler": "^9.1.11",
+    "@angular/core": "^9.1.11",
+    "@angular/forms": "^9.1.11",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "^9.1.11",
+    "@angular/platform-browser-dynamic": "^9.1.11",
+    "@angular/router": "^9.1.11",
     "@ngx-translate/core": "^12.1.2",
-    "@swimlane/ngx-charts": "^13.0.4",
+    "@swimlane/ngx-charts": "^14.0.0",
     "@types/resize-observer-browser": "^0.1.3",
+    "active-win": "^6.1.0",
     "auto-launch": "^5.0.5",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "custom-electron-titlebar": "git+https://github.com/PoE-Overlay-Community/custom-electron-titlebar.git#9863e12aa39bb077f8b49f7569169f03e14b2995",
-    "electron-log": "^4.1.1",
-    "electron-updater": "^4.2.5",
+    "electron-log": "^4.2.1",
+    "electron-updater": "^4.3.1",
     "iohook": "^0.6.5",
-    "localforage": "^1.7.3",
-    "moment": "^2.24.0",
-    "node-window-manager": "^2.2.2",
+    "localforage": "^1.7.4",
+    "moment": "^2.26.0",
+    "node-window-manager": "^2.2.3",
     "robotjs": "git+https://github.com/PoE-Overlay-Community/robotjs.git#a219829c83ff7f3a802c98a9c52a672ca798d80e",
     "rxjs": "^6.5.5",
-    "tslib": "^1.11.1",
+    "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
   },
   "resolutions": {
