--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,29 +14,14 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "importHelpers": true,
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom"],
     "paths": {
-      "@app/*": [
-        "src/app/core/*"
-      ],
-      "@shared/*": [
-        "src/app/shared/*"
-      ],
-      "@modules/*": [
-        "src/app/modules/*"
-      ],
-      "@env/*": [
-        "src/environments/*"
-      ],
-      "@data/*": [
-        "src/app/data/*"
-      ]
+      "@app/*": ["src/app/core/*"],
+      "@shared/*": ["src/app/shared/*"],
+      "@modules/*": ["src/app/modules/*"],
+      "@env/*": ["src/environments/*"],
+      "@data/*": ["src/app/data/*"]
     }
   },
   "angularCompilerOptions": {
