--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poe-overlay",
-  "version": "0.7.1-beta",
+  "version": "0.7.1",
   "private": true,
   "description": "A Overlay for Path of Exile. Built with Electron and Angular.",
   "main": "main.js",
