--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@angular/router": "^9.1.3",
     "@ngx-translate/core": "^12.1.2",
     "@swimlane/ngx-charts": "^13.0.4",
+    "@types/lodash": "^4.14.157",
     "@types/resize-observer-browser": "^0.1.3",
     "active-win": "^6.1.0",
     "auto-launch": "^5.0.5",
@@ -90,10 +91,11 @@
     "electron-updater": "^4.2.5",
     "iohook": "^0.6.5",
     "localforage": "^1.7.3",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-window-manager": "^2.2.2",
     "robotjs": "git+https://github.com/PoE-Overlay-Community/robotjs.git#a219829c83ff7f3a802c98a9c52a672ca798d80e",
-    "rxjs": "^6.5.5",
+    "rxjs": "^6.6.0",
     "tslib": "^1.11.1",
     "zone.js": "^0.10.3"
   },
